--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,7 +548,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 0;
   overflow: hidden;
 }
 
